--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,12 @@ body,td,th,p{
 	color: #333;
 	line-height: 1.5;
 }
+
 body {
 	background-color: #fdfdfd;
 	margin: 0;
 	position:relative;
+	height: 100%;
 }
 
 ul, li {
@@ -77,9 +79,10 @@ main section ul li img:focus {
   text-align: center;
   text-transform: uppercase;
 }
+
 /* ====================== Navigation ====================== */
 /* Style for mobile devices*/
-@media (min-width: 300px) and (max-width: 800px) {
+@media (min-width: 270px) and (max-width: 800px) {
   nav {
     width: 100%;
     height: 10%;
@@ -92,7 +95,6 @@ main section ul li img:focus {
 		padding-bottom: 5vh;
 		padding-left: 5vw;
 		padding-right: 5vw;
-
   }
   nav h1 a {
     color: #f2f2f2;
@@ -108,18 +110,12 @@ main section ul li img:focus {
     background-color: #ccc;
   }
 
-	/* ====================== Restaurant Details ====================== */
-	.inside header {
-	  position: fixed;
-	  top: 0;
-	  width: 100%;
-	  z-index: 1000;
-	}
+
 	.inside #map-container {
 	  background: #f3f3f3 none repeat scroll 0 0 ;
 	  height: 404px;
 	  position: sticky;
-		padding-top: 150px;
+		padding-top: 0px;
 	  width: 100%;
 	}
 	.inside #map {
@@ -130,12 +126,11 @@ main section ul li img:focus {
 	.inside #footer {
 	  bottom: 0;
 	  position: relative;
-
 	}
 	#restaurant-name {
 	  color: #f18200;
 	  font-family: Arial,sans-serif;
-	  font-size: 20pt;
+	  /*font-size: 20pt;*/
 	  font-weight: 200;
 	  letter-spacing: 0;
 	  margin: 15px 0 30px;
@@ -173,7 +168,7 @@ main section ul li img:focus {
 	}
 	#reviews-container h2 {
 	  color: #f58500;
-	  font-size: 24pt;
+	  font-size: 18pt;
 	  font-weight: 300;
 	  letter-spacing: -1px;
 	  padding-bottom: 1pt;
@@ -204,7 +199,7 @@ main section ul li img:focus {
 		display: inline;
 		margin: 0 20px 10px;
 		font-family: Arial, sans-serif;
-		font-size: 17pt;
+		font-size: 15pt;
 		font-weight: 300;
 		width: 100%;
 	}
@@ -240,6 +235,141 @@ main section ul li img:focus {
 		font-weight: lighter;
 	  color: #666;
 	}
+
+	#breadcrumb {
+	    padding: 10px 40px 16px;
+	    list-style: none;
+	    background-color: #eee;
+	    font-size: 17px;
+	    margin: 0;
+	}
+
+	/* Display list items side by side */
+	#breadcrumb li {
+	    display: inline;
+			font-size: 20px;
+	}
+
+	/* Add a slash symbol (/) before/behind each list item */
+	#breadcrumb li+li:before {
+	    padding: 8px;
+	    color: black;
+	    content: "/\00a0";
+	}
+
+	/* Add a color to all links inside the list */
+	#breadcrumb li a {
+	    color: #0275d8;
+	    text-decoration: none;
+	}
+
+	/* Add a color on mouse-over */
+	#breadcrumb li a:hover {
+	    color: #01447e;
+	    text-decoration: underline;
+	}
+
+	/* ====================== Restaurant Filtering ====================== */
+	.filter-options {
+	  width: 100%;
+	  height: 10%;
+	  background-color: #3397DB;
+	  align-items: center;
+	}
+	.filter-options h2 {
+	  color: white;
+	  font-size: 1.3rem;
+	  font-weight: normal;
+	  line-height: 2;
+	  margin: 0 20px;
+	}
+	.filter-options select {
+	  background-color: white;
+	  border: 3px solid #fff;
+	  font-family: Arial,sans-serif;
+	  font-size: 14pt;
+	  height: 35px;
+	  letter-spacing: 0;
+	  margin: 20px 20px 20px 20px;
+	  padding: 0 10px;
+	  width: 200px;
+	}
+
+	.filter-options select:focus {
+		border: 2px solid #002266;
+		border-radius: 5px;
+		box-shadow: 2px 2px 5px #002266;
+	}
+
+	/* ====================== Restaurant Listing ====================== */
+	#restaurants-list {
+	  background-color: #f3f3f3;
+	  list-style: outside none none;
+	  margin: auto;
+	  padding: 20px 0px 0px 5%;
+	  text-align: center;
+	}
+	#restaurants-list li {
+	  background-color: #f3f3f3;;
+	  border: 4px solid #ccc;
+	  border-left: 0;
+	  border-right: 0;
+	  font-family: Arial,sans-serif;
+	  margin: auto;
+	  min-height: 380px;
+	  padding: 0 0px 55px;
+	  text-align: left;
+	  width: 100%;
+	}
+	#restaurants-list .restaurant-img {
+	  background-color: #ccc;
+	  border-radius: 25px 0px 0px 0px;
+	  display: block;
+	  margin: 0px 0px 25px 0px;
+	  max-width: 100%;
+	  min-height: 248px;
+	  min-width: 50%;
+	}
+	#restaurants-list li h1 {
+	  color: #f18200;
+	  font-family: Arial,sans-serif;
+	  font-size: 14pt;
+	  font-weight: 200;
+	  letter-spacing: 0;
+	  line-height: 1.3;
+	  margin: 20px 0 30px;
+	  text-transform: uppercase;
+	}
+	#restaurants-list p {
+	  margin: 0;
+	  font-size: 14pt;
+	  font-weight: lighter;
+	}
+	#restaurants-list li a {
+	  background-color: orange;
+	  border-bottom: 3px solid #eee;
+	  color: #fff;
+	  display: inline-block;
+	  font-size: 11pt;
+	  margin: 15px 0 0 1px;
+	  padding: 8px 30px 10px;
+	  text-align: center;
+	  text-decoration: none;
+	  text-transform: uppercase;
+	}
+
+	#restaurants-list li a:focus {
+		background-color: #3397db;
+	  border-bottom: 3px solid #eee;
+	  color: #fff;
+	  display: inline-block;
+	  font-size: 11pt;
+	  margin: 15px 0 0 1px;
+	  padding: 8px 30px 10px;
+	  text-align: center;
+	  text-decoration: none;
+	  text-transform: uppercase;
+	}
 }
 
 /* Style for desktop devices */
@@ -254,6 +384,8 @@ main section ul li img:focus {
     margin: auto;
 		padding-top: 5vh;
 		padding-bottom: 5vh;
+		padding-left: 5vw;
+		padding-right: 5vw;
   }
   nav h1 a {
     color: #fff;
@@ -279,8 +411,8 @@ main section ul li img:focus {
 	  background: #f3f3f3 none repeat scroll 0 0 ;
 	  height: 404px;
 	  position: sticky;
-		left: 3%;
-		padding-top: 150px;
+		left: 40px;
+		padding-top: 222px;
 	  width: 60%;
 	}
 	.inside #map {
@@ -296,7 +428,7 @@ main section ul li img:focus {
 	#restaurant-name {
 	  color: #f18200;
 	  font-family: Arial,sans-serif;
-	  font-size: 20pt;
+	  /*font-size: 20pt;*/
 	  font-weight: 200;
 	  letter-spacing: 0;
 	  margin: 15px 0 30px;
@@ -334,7 +466,7 @@ main section ul li img:focus {
 	}
 	#reviews-container h2 {
 	  color: #f58500;
-	  font-size: 24pt;
+	  font-size: 18pt;
 	  font-weight: 300;
 	  letter-spacing: -1px;
 	  padding-bottom: 1pt;
